fixed dark mode

--- a/final/styles/base.css
+++ b/final/styles/base.css
@@ -92,6 +92,7 @@ header {
 
 #hamBtn{
     right: 1rem;
+    font-size: 3rem;
 }
 
 /* Sidebar CSS */
@@ -197,7 +198,7 @@ nav a {
 }
 
 nav a:hover {
-    color: var(--tropical-sea-blue);
+    color: var(--sand-yellow);
 }
 
 .icon{
